Bug fix - relative path for webapi/getContent